Bug 1041341 - Part 2: Report a SyntaxError for destructuring rest with trailing comma. r=arai